syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "k8s.io/test-infra/prow/gangway";

service Prow {
  // FIXME: In the future we can just return a unique token (only), in the same
  // way that GCB returns immediately with the globally-unique BuildId. That is,
  // in the future the response will be a union of either the full JobExecution
  // message or a single JobExecutionToken (string). See
  // https://docs.google.com/document/d/1v77jp1Nb5C2C2-PdV02SGViO9CyZ9SvNxCPOHyIUQeo/edit#bookmark=id.q68srxklvpt4.
  rpc CreateJobExecution(CreateJobExecutionRequest) returns (JobExecution) {
    option (google.api.http) = {
      custom: {
        kind: "POST",
        path: "/v1/executions",
      }
      body: "*"  // See
                 // https://cloud.google.com/endpoints/docs/grpc/transcoding#use_wildcard_in_body
    };
  }
  rpc GetJobExecution(GetJobExecutionRequest) returns (JobExecution) {
    // Client example:
    //   curl http://DOMAIN_NAME/v1/executions/1
    option (google.api.http) = {
      get: "/v1/executions/{id}"
    };
  }
  rpc ListJobExecutions(ListJobExecutionsRequest) returns (JobExecutions) {
    // Client example:
    //   curl
    //   http://DOMAIN_NAME/v1/executions?job_name=my-prow-job&status=SUCCESS
    option (google.api.http) = {
      get: "/v1/executions"
    };
  }
}

message CreateJobExecutionRequest {
  string job_name = 1;
  JobExecutionType job_execution_type = 2;
  Refs refs = 3;
  PodSpecOptions pod_spec_options = 4;
}

message PodSpecOptions {
  map<string, string> envs = 1;
  map<string, string> labels = 2;
  map<string, string> annotations = 3;
}

/* Look up a single Prow Job execution. */
message GetJobExecutionRequest {
  string id = 1;
}

/* Look up all Prow Job executions that match all fields given here. */
message ListJobExecutionsRequest {
  string job_name = 1;            // Mapped to URL query parameter `job_name`.
  JobExecutionStatus status = 2;  // Mapped to URL query parameter `status`.
}

message JobExecutions {
  repeated JobExecution job_execution = 1;
}

message JobExecution {
  string id = 1;
  string job_name = 2;
  JobExecutionType job_type = 3;
  JobExecutionStatus job_status = 4;
  Refs refs = 5;
  PodSpecOptions pod_spec_options = 6;
  string gcs_path = 7;
  google.protobuf.Timestamp create_time = 8;
  google.protobuf.Timestamp completion_time = 9;
}

// JobExecutionStatus is a 1:1 translation of the existing "ProwJobState" type
// in prow/apis/prowjobs/v1/types.go.
enum JobExecutionStatus {
  JOB_EXECUTION_STATUS_UNSPECIFIED = 0;
  TRIGGERED = 1;
  PENDING = 2;
  SUCCESS = 3;
  FAILURE = 4;
  ABORTED = 5;
  ERROR = 6;
}

// JobExecutionType is a 1:1 translation of the existing "ProwJobType" type
// in prow/apis/prowjobs/v1/types.go.
enum JobExecutionType {
  JOB_EXECUTION_TYPE_UNSPECIFIED = 0;
  PERIODIC = 1;
  POSTSUBMIT = 2;
  PRESUBMIT = 3;
  BATCH = 4;
}

/* Refs is a direct, 1:1 translation of the existing "Refs" struct defined in
 * prow/apis/prowjobs/v1/types.go.
 */
message Refs {
  string org = 1;
  string repo = 2;
  string repo_link = 3;
  string base_ref = 4;
  string base_sha = 5;
  string base_link = 6;
  repeated Pull pulls = 7;
  string path_alias = 8;
  bool work_dir = 9;
  string clone_uri = 10;
  bool skip_submodules = 11;
  int32 clone_depth = 12;
  bool skip_fetch_head = 13;
}

/* Pull is a direct, 1:1 translation of the existing "Pull" struct defined in
 * prow/apis/prowjobs/v1/types.go.
 */
message Pull {
  int32 number = 1;
  string author = 2;
  string sha = 3;
  string title = 4;
  string ref = 5;
  string link = 6;
  string commit_link = 7;
  string author_link = 8;
}
